RESOLVED FIXED184508
Fix TestInvocation class for newer versions of clang
https://bugs.webkit.org/show_bug.cgi?id=184508
Summary Fix TestInvocation class for newer versions of clang
Jonathan Bedard
Reported 2018-04-11 10:22:42 PDT
Newer versions of clang raise a warning when compiling the TestInvocation class because it is not declared as final and does not have a virtual destructor.
Attachments
Patch (1.18 KB, patch)
2018-04-11 10:24 PDT, Jonathan Bedard
no flags
Patch for landing (1.22 KB, patch)
2018-04-11 13:19 PDT, Jonathan Bedard
no flags
Jonathan Bedard
Comment 1 2018-04-11 10:24:33 PDT
Alexey Proskuryakov
Comment 2 2018-04-11 12:54:01 PDT
Jonathan Bedard
Comment 3 2018-04-11 13:19:30 PDT
Created attachment 337727 [details] Patch for landing
WebKit Commit Bot
Comment 4 2018-04-11 13:38:28 PDT
Comment on attachment 337727 [details] Patch for landing Clearing flags on attachment: 337727 Committed r230545: <https://trac.webkit.org/changeset/230545>
WebKit Commit Bot
Comment 5 2018-04-11 13:38:29 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.