Fix TestInvocation class for newer versions of clang. https://bugs.webkit.org/show_bug.cgi?id=184508 <rdar://problem/39328648>

Reviewed by Alexey Proskuryakov.

Declare TestInvocation to be final so it does not require a virtual destructor.

* WebKitTestRunner/TestInvocation.h:


Canonical link: https://commits.webkit.org/200063@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@230545 268f45cc-cd09-0410-ab3c-d52691b4dbfc